--- a/TestingD3Pt2June.ipynb
+++ b/TestingD3Pt2June.ipynb
@@ -22,7 +22,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
-    "import sklearn.datasets"
+    "import sklearn.datasets",
+    "import webbrowser",
+    "import os"
    ]
   },
   {
